--- a/app/src/main/res/layout/activity_main_hisory.xml
+++ b/app/src/main/res/layout/activity_main_hisory.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E8E8E8"
     tools:context=".MainHisory">
 
 
@@ -13,13 +14,12 @@
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_weight="1"
-        android:paddingTop="24dp"
         android:scrollbars="vertical"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/escribir"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/principalInfo"
         app:reverseLayout="true"
         app:stackFromEnd="true"
         tools:ignore="MissingConstraints" />
@@ -28,10 +28,10 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="parent"
+        android:orientation="horizontal"
         android:textColor="#FFFFFF"
-        tools:ignore="MissingConstraints"
-        android:orientation="horizontal" />
+        app:layout_constraintBottom_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/escribir"
@@ -39,8 +39,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/shapewhite"
 
+        android:background="@drawable/darkshape"
         android:hint="Escribe un mensaje"
         android:maxHeight="120dp"
         android:paddingLeft="48dp"
@@ -48,8 +48,9 @@
         android:paddingRight="6dp"
         android:paddingBottom="10dp"
         android:text=""
-        android:textColor="@color/black_1"
+        android:textColor="@color/gray_50"
         android:textColorHint="@color/grey_500"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/boton"
         app:layout_constraintStart_toStartOf="parent" />
@@ -62,6 +63,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/arrow"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/escribir" />
@@ -73,6 +75,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/image_icon"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -85,5 +88,134 @@
         android:background="@android:drawable/arrow_down_float"
         app:layout_constraintBottom_toBottomOf="@+id/vistaChat"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/principalInfo"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/pRef"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Paciente:"
+                android:textColor="#000000"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/patientS"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingStart="8dp"
+                android:text="Loading..."
+                android:textColor="#202020" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/bRef"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Fehca nacimiento:"
+                android:textColor="#000000"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/bornS"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingStart="8dp"
+                android:text="Loading..."
+                android:textColor="#202020" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/phRef"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Teléfono:"
+                android:textColor="#000000"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/phoneS"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingStart="8dp"
+                android:text="Loading..."
+                android:textColor="#202020" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/aRef"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dirección:"
+                android:textColor="#000000"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/addressS"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingStart="8dp"
+                android:text="Loading..."
+                android:textColor="#202020" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/dRef"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="CC:"
+                android:textColor="#000000"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/documentS"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingStart="8dp"
+                android:text="Loading..."
+                android:textColor="#202020" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
