--- a/app/src/main/res/layout/card_view_history.xml
+++ b/app/src/main/res/layout/card_view_history.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#00FFFFFF"
     android:orientation="vertical"
     android:paddingEnd="8dp">
 
@@ -16,8 +17,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="4dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="4dp"
-        android:background="@drawable/darkshape"
+        android:layout_marginBottom="7dp"
+        android:background="@drawable/blueshape"
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
         android:paddingRight="5dp">
@@ -28,7 +29,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="8dp"
             android:text="hora"
-            android:textColor="@color/grey_500"
+            android:textColor="#606060"
             android:textSize="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +44,7 @@
             android:layout_height="wrap_content"
             android:paddingStart="4dp"
             android:text="mensaje"
-            android:textColor="#FFFFFFFF"
+            android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +71,7 @@
             android:layout_height="wrap_content"
             android:baselineAligned="false"
             android:text="nombre"
-            android:textColor="@color/grey_300"
+            android:textColor="#4A4A4A"
             android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/mensaje"
